[package]
name = "usbd-dfu"
description = "DFU protocol for a `usb-device` device."
version = "0.4.0"
authors = ["Vitalii Bursov <vitaly@bursov.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["no-std", "usb-device", "dfu"]
repository = "https://github.com/vitalyvb/usbd-dfu"
exclude = [
    ".github",
]

[dependencies.usb-device]
version = "0.3.1"

[dev-dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "medium", "stm32-usbd"]

[patch.crates-io]
stm32-usbd = { git = "https://github.com/vitalyvb/stm32-usbd.git", branch = "usb-device-3" }
