[package]
name = "usbd-dfu"
description = "DFU protocol for a `usb-device` device."
version = "0.4.0"
authors = ["Vitalii Bursov <vitaly@bursov.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["no-std", "usb-device", "dfu"]
repository = "https://github.com/vitalyvb/usbd-dfu"
exclude = [
    ".github",
]

[dependencies.usb-device]
version = "0.3.2"

[dev-dependencies.usbd-class-tester]
version = "0.1.0"
